# TonyStock

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  analyze_stock.py  docker-compose.yaml  line_logs  logs  main.py  main_fastapi.py  markdown_content.md  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  stock_1762_report_20250109_110948.txt  stock_1762_report_20250109_111211.txt  stock_1762_report_20250109_113431.txt  stock_1762_report_20250109_163721.txt  system_prompts.md  technical_analysis_report.txt  test.py  test_agent.py  utils.py
agents/: __init__.py  base.py  capital_agent.py  chips_agent.py  research_agent.py  technical_agent.py  technical_agents.py  trial_agent.py
agents/analysis_agents/: analysis_report_agent.py
agents/chip_analysis_agents/: chip_agent.py
agents/core/: __init__.py  orchestrator.py  planning_agent.py  writing_agent.py
agents/planning_agents/: planning_report_agent.py
agents/research/: online_search_agents.py  search_framework_agent.py
agents/research_agents/: onlin_research_agents.py  (+4 more)
analysis_results/: 2449_京鼎_combined_analysis.md
api/: __init__.py  server.py
cursor_intelligence/: cursor_prompt
database/: __init__.py  utils.py
prompts/: 3036_instruction.md  3413_instruction.md  8299_instruction.md  TA_instruction.md  __init__.py  analysis_prompts.py  chip_instruction.md  research_instruction.md  system_prompts.md  system_prompts.py  technical_instruction.md  writing_instruction.md
reports/: 1762_full_report_20250109_115626.md  1762_news_20250109_115626.md  1762_technical_20250109_115145.md  3036_technical_20250109_125442.md  3413_full_report_20250110.md
src/: __init__.py  logger.py
static/: TSE_ticker.csv
stock_analysis/: 大立光.md
tests/: __init__.py  test_financial_data.py  test_investment_report.py  test_llm_api.py  test_market_data.py  test_online_research_agents.py  test_search_engine.py  test_trial_agent.py  test_web_scraper.py
tools/: __init__.py  capital_data_fetcher.py  data_formatter.py  data_processor.py  enhanced_stock_analyzer.py  financial_data_fetcher.py  llm_api.py  market_data_fetcher.py  market_data_utils.py  news_sentiment_analyzer.py  orchestrator.py  prompt_generator.py  read_pdf.py  report_generator.py  report_monitor.py  search_engine.py  stock_analyzer.py  test_twse_service.py  time_tool.py  tokencost.py  twse_service.py  types.py  utils.py  web_scraper.py  web_scraper_by_ai.py
utils/: __init__.py  stock_utils.py
whisper/: audio2text.py  requirements.txt  transcript.txt
(+47 files in other folders)
