[tool.poetry]
name = "tonystock"
version = "0.1.0"
description = "Stock analysis project"
authors = ["Jeff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
flask = "^3.1.0"
uvicorn = "^0.29.0"
pandas = "^2.2.3"
numpy = "^1.26.4"
httpx = "^0.28.1"
aiohttp = "^3.11.11"
beautifulsoup4 = "^4.12.3"
crawl4ai = "^0.4.247"
anthropic = "^0.42.0"
openai = "^1.59.4"
tiktoken = "^0.8.0"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
tenacity = "^9.0.0"
opik = "^1.4.6"
typing-extensions = "^4.12.2"
line-bot-sdk = "^3.14.5"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
